# flaredfolders

./: .gitignore  README.md  TODO.md  desktop.ini  index.html  notice.html  package-lock.json  package.json
.github/workflows/: discord.yml
assets/favicon/: site.webmanifest
css/: master.css  notice.css
js/: draw.js  icon-modal.js  icon.js  inputs.js  master.js  notice.js
public/: site.webmanifest
public/favicon/: site.webmanifest
src/: credits.json  middleware.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/app/: layout.jsx  not-found.jsx  page.jsx  robots.jsx  sitemap.jsx
src/components/: carousel.jsx  cheat-code.jsx  credits.jsx  download-count.jsx  firefox.jsx  footer.desktop.jsx  footer.jsx  header-buttons.jsx  header.desktop.jsx  header.jsx  icon-preview.jsx  kofi.jsx  loading.jsx  logo.jsx  mobile.jsx  modal.jsx  splash.jsx  theme-init.jsx  view.jsx
src/functions/: case-swaps.jsx  fetch-browser-type.jsx  fetch-client.jsx  fetch-custom.jsx  fetch-emoji.jsx  fetch-lucide.jsx  fetch-simple.jsx  folder-generate.jsx  set-primary.jsx  set-theme.jsx  theme-set.jsx  theme-swap.jsx
src/i18n/: request.jsx  routing.jsx
src/lib/: client.jsx  fetch-lucide.jsx  fetch-os.jsx  fetch-simple.jsx  folder-generate.jsx  set-primary.jsx  supabase.jsx  theme-swap.jsx
src/locales/: de.json  en.json  es.json  pl.json
src/stores/: color-palette.json  credits.json  folder-config.jsx
src/styles/: color.css  credits.css  dropdown.css  emoji-picker.css  folder.css  footer.css  globals.css  header.css  (+13 more)
(+72 files in other folders)
