[package]
name = "FlaredFolders"
version = "2.4.0"
description = "Generate custom folder designs for your favorite operating system. Free, open source, and no ads. Import your own icons, use Simple Icons, or use Lucide icons."
authors = ["Ethan Hazel"]
license = "GPLv3"
repository = "https://github.com/EthanHazel/flaredfolders"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-plugin-dialog = "2.3.0"
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2.3.0"
dirs = "6.0.0"
